--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "timeline",
   "version": "1.0.0",
   "description": "Timeline",
-  "main": "index.js",
+  "main": "index.html",
   "dependencies": {
     "bower-requirejs": "^1.2.0",
     "bower": "^1.8.0"
