--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "pixi.js": "^4.2.2",
-    "requirejs": "^2.3.2"
+    "requirejs": "^2.3.2",
+    "jquery": "^3.1.1"
   }
 }
